// Copyright 2020 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file or at
// https://developers.google.com/open-source/licenses/bsd

syntax = "proto3";

package monorail.v1;

import "api/v1/api_proto/issue_objects.proto";

service Issues {
  rpc GetIssue (GetIssueRequest) returns (Issue) {}
}


// Next available tag: 2
message GetIssueRequest {
  // The name of the issue to request, see Issue.name.
  string name = 1;
}